--- a/front_end/package.json
+++ b/front_end/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "echarts": "^5.0.0",
     "vant": "^2.11.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
