--- a/front_end/package.json
+++ b/front_end/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "echarts": "^5.0.0",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "vant": "^2.11.1",
     "vue": "^2.6.11",
