--- a/back_end/requirements.txt
+++ b/back_end/requirements.txt
@@ -1,3 +1,5 @@
+beautifulsoup4==4.9.3
+bs4==0.0.1
 certifi==2020.11.8
 chardet==3.0.4
 click==7.1.2
@@ -15,8 +17,10 @@ pytz==2020.4
 requests==2.25.0
 scikit-learn==0.23.2
 scipy==1.5.4
+selenium==3.141.0
 six==1.15.0
 sklearn==0.0
+soupsieve==2.1
 threadpoolctl==2.1.0
 urllib3==1.26.2
 Werkzeug==1.0.1
