--- a/back_end/requirements.txt
+++ b/back_end/requirements.txt
@@ -1,10 +1,13 @@
 beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2020.11.8
+cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-Cors==3.0.9
+gevent==21.1.2
+greenlet==1.0.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -12,6 +15,7 @@ joblib==0.17.0
 MarkupSafe==1.1.1
 numpy==1.19.4
 pandas==1.1.4
+pycparser==2.20
 python-dateutil==2.8.1
 pytz==2020.4
 requests==2.25.0
@@ -24,3 +28,5 @@ soupsieve==2.1
 threadpoolctl==2.1.0
 urllib3==1.26.2
 Werkzeug==1.0.1
+zope.event==4.5.0
+zope.interface==5.2.0
